-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 15, 16, 17
-
Component/s: hotspot
-
b29
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258440 | 17 | Tom Rodriguez | P3 | Resolved | Fixed | |
| JDK-8259671 | 11.0.11-oracle | Dukebot | P3 | Resolved | Fixed | b02 |
We have been getting crashes running our unit tests in our gates with JDK15. The crashes are mostly in nmethod::is_unloaded because IsUnloadingBehaviour::current() is null. It seemed like there was some inconsistency in the notion of is_unloading for JVMCI nmethods that was leading to the crashes. I noticed that the is_unloading path rescans the nmethod using a closure to determine if it's unloading and since make_unloaded will clear the InstalledCode reference at the end if you ran the closure again it might return false since the oop is now null instead of being an unmarked oop. There's no point in clearing the oop in this path anyway since the nmethod is dead and leaving the oop around seem to solve this crash. We're only see this crash in 15 but I don't see why it couldn't occur in 11 or later.
- backported by
-
JDK-8258440 [JVMCI] don't clear InstalledCode reference when unloading JVMCI nmethods
-
- Resolved
-
-
JDK-8259671 [JVMCI] don't clear InstalledCode reference when unloading JVMCI nmethods
-
- Resolved
-