8258380: [JVMCI] don't clear InstalledCode reference when unloading JVMCI nmethods

Reviewed-by: kvn, eosterlund