src/share/vm/code/nmethod.cpp
@@ -1572,7 +1572,6 @@ void nmethod::make_unloaded(BoolObjectClosure* is_alive, oop cause) {
   JVMCINMethodData* nmethod_data = jvmci_nmethod_data();
   if (nmethod_data != NULL) {
     nmethod_data->invalidate_nmethod_mirror(this);
-    nmethod_data->clear_nmethod_mirror(this);
   }
 #endif
 
